--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,14 @@
 .app-wrapper {
-    margin: 0 auto;
     display: grid;
+    margin-top: 10px;
+    margin-left: 90px;
     width: 1200px;
+    position: absolute;
     grid-template-areas:
     'h h'
     'n c';
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
     grid-gap: 10px;
-
-}
-
-
-.header {
-    grid-area: h;
-    background-color: darkorange;
-    border-radius: 5px;
-}
-
-.header img {
-    width: 50px;
-    border-radius: 5px;
-}
-
-.nav {
-    grid-area: n;
-    background-color: orangered;
-    border-radius: 5px;
-}
-
-.content {
-    grid-area: c;
-    background-color: darkgoldenrod;
-    border-radius: 5px;
+    justify-content: center;
 }
