--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  overflow: auto;
+
+
 }
 
 code {
@@ -16,11 +18,18 @@ code {
 .main {
   width: 100%;
   height: 100vh;
+
 }
 
 video {
+  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  top: 0;
+  left: 0;
+
+
+
 }
 
