--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,25 @@
+.main {
+    width: 100%;
+    height: 100vh;
+}
+
+video {
+    /*width: 100%;*/
+    /*height: 100vh;*/
+    /*object-fit: cover;*/
+
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+}
+
 .app-wrapper {
     display: grid;
-    margin-top: 10px;
-    margin-left: 250px;
+    margin: 0 auto;
     width: 1200px;
-    position: absolute;
     grid-template-areas:
     'h h'
     'n c';
@@ -11,6 +27,7 @@
     grid-template-columns: 2fr 10fr;
     grid-gap: 10px;
     justify-content: center;
+
 }
 
 .app-wrapper-content {
@@ -18,3 +35,4 @@
     border-radius: 5px;
     background: rgba(255, 78, 0, 0.4);
 }
+
