Start learn lesson number 21 (style Dialogs.tsx and Dialogs.module.css)

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,8 +2,14 @@
     grid-area: n;
     border-radius: 5px;
     background: rgba(255, 78, 0, 0.4);
+    padding: 30px;
 }
 
-.item {
+.item a {
     color: whitesmoke;
+    text-decoration: none;
+}
+
+.item a.activeLink {
+    color: orange;
 }
