--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ video {
 .app-wrapper {
     display: grid;
     margin: 0 auto;
+    margin-top: 20px;
     width: 1200px;
     grid-template-areas:
     'h h'
