--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,4 +1,20 @@
 .dialogs {
-
+    display: grid;
+    grid-template-columns: 2fr 10fr;
 }
 
+.dialogsItems {
+    padding: 30px;
+}
+
+.dialogsItems .active {
+    color: deeppink;
+}
+
+.messages {
+    padding: 30px;
+}
+
+.messages .message {
+
+}
