Complete lesson number 25 (add a massive-metod 'Map' for 'Dialogs.tsx' and 'MyPosts.tsx')

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -5,6 +5,7 @@
 
 .dialogsItems {
     padding: 30px;
+    color: white;
 }
 
 .dialogsItems .active {
@@ -16,5 +17,5 @@
 }
 
 .messages .message {
-
+    color: white;
 }
